src/bootstrap/test/v0_5/rejects/14_cycle_reject/b.zg
import "main"

pub fn from_b() -> int {
    return 1
}
